--- a/page4.html
+++ b/page4.html
@@ -54,13 +54,13 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="Course.html"><span class="mbri-cloud mbr-iconfont mbr-iconfont-btn"></span>
-                        Learn</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"><span class="socicon socicon-instructables mbr-iconfont mbr-iconfont-btn"></span>About us</a></li></ul>
+                        Learn</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html"><span class="socicon socicon-instructables mbr-iconfont mbr-iconfont-btn"></span>About us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section once="footers" class="cid-sh6ua8ssG6" id="footer6-1d">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section once="footers" class="cid-sh6ua8ssG6" id="footer6-1d">
 
     
 
