--- a/Course.html
+++ b/Course.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section once="footers" class="cid-sh6oM4VuEv" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-sh6oM4VuEv" id="footer6-9">
 
     
 
