--- a/page7.html
+++ b/page7.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-sh6xfs7UvN" id="footer6-1x">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-sh6xfs7UvN" id="footer6-1x">
 
     
 
