--- a/page10.html
+++ b/page10.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-sh6BfdP4vs" id="footer6-2h">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section once="footers" class="cid-sh6BfdP4vs" id="footer6-2h">
 
     
 
