--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -70,7 +70,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    Welcome To Tanisha's Web&nbsp;</h1>
+                    Welcome</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-1">
                     Let's Learn<br><strong>Cloud Computing</strong>&nbsp;</p>
@@ -129,7 +129,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s5ZMG1R333JqP672v68hf9KJPhms0OCgaCvcEfJFv98KgrLTGV0W25f4JV2BvCNla0NlSG/qv/TGO9fsa9//az9QcJfafI/ISLakARrmN8Ce/iDov+0J42AhXPSpsYcm">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6i174RhoZNfoQ34tJb625YGUSw3LawwToKaxyLNv4E2unvPMU0CLnDe/jVn7hoDBOHgsATM4i3vLJCdZxx4A3VrzLrTX3An04bg5dh/wZkN9syLiwDxJ31rDhqB2Q65T">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
