--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="Course.html"><span class="mbri-cloud mbr-iconfont mbr-iconfont-btn"></span>
-                        Learn</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html"><span class="socicon socicon-instructables mbr-iconfont mbr-iconfont-btn"></span>About us</a></li></ul>
+                        Learn</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page12.html"><span class="socicon socicon-instructables mbr-iconfont mbr-iconfont-btn"></span>About us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -129,7 +129,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6i174RhoZNfoQ34tJb625YGUSw3LawwToKaxyLNv4E2unvPMU0CLnDe/jVn7hoDBOHgsATM4i3vLJCdZxx4A3VrzLrTX3An04bg5dh/wZkN9syLiwDxJ31rDhqB2Q65T">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CTGj1BVdZcCtGorRXCU/hBOPQ2YRhfIjKByPmzY7BFBMfIJN6FkkSVMwNHgR7dz1yOzQk7Wd1GXbWWtZuiUrVhgNRe9WHGNGql1Edq31evnlEMYrfn354OqNFdwOl2Ar">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
