--- a/page12.html
+++ b/page12.html
@@ -54,13 +54,13 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="Course.html"><span class="mbri-cloud mbr-iconfont mbr-iconfont-btn"></span>
-                        Learn</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html"><span class="socicon socicon-instructables mbr-iconfont mbr-iconfont-btn"></span>About us</a></li></ul>
+                        Learn</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page12.html"><span class="socicon socicon-instructables mbr-iconfont mbr-iconfont-btn"></span>About us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-sh6oM4VuEv" id="footer6-32">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section once="footers" class="cid-sh6oM4VuEv" id="footer6-32">
 
     
 
@@ -94,7 +94,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="INh4WHhJiNx4DdgUM781fEoqKE0RMm5eqbeWp0xQIpZvnBbZGggTpS0sBFlsPwDgHwODW8tpFUDOBF2kOsYdtOvIWEmnI0+Kor0feqEtF+1wGq1fe1+X9s6auh5Wy8rZ">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hL9/lMFJNroS6njORH3bjAvHcKt33AEC2ILxdO+BWwhY/NSFyhz/fVpereQ9PUvviLzDZYgel04ciuRy8qYCKGLhc6V/+xYBl1OM3KH98DFoUS/QfUanngRN0AgCfZQ6">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
